--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "extends": "@indivorg/eslint-config"
   },
   "devDependencies": {
-    "@types/node": "^14",
     "@types/jest": "^26.0.24",
+    "@types/node": "^14",
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
     "lint-staged": "^11.0.0",
@@ -46,7 +46,7 @@
     "@kubernetes/client-node": "^0.15.0",
     "commander": "^8.0.0",
     "get-port": "^5.1.1",
-    "rxjs-shell": "^3.0.7",
+    "ora": "^5.4.1",
     "ts-invariant": "^0.9.0"
   }
 }
