--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "@indivorg/runner",
   "version": "2.0.0",
-  "repository": "git@github.com:indivorg/runner.git",
-  "author": "Indiv AS",
+  "repository": "github:indivorg/runner",
   "license": "Apache-2.0",
-  "publishConfig": {
-    "access": "public"
-  },
-  "engines": {
-    "node": ">=12"
-  },
-  "files": [
-    "dist"
-  ],
+  "author": "Indiv AS",
   "main": "dist/main.js",
   "bin": {
     "indiv-runner": "dist/cli.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/main.ts",
@@ -25,6 +19,14 @@
   },
   "eslintConfig": {
     "extends": "@indivorg/eslint-config"
+  },
+  "dependencies": {
+    "@indivorg/eslint-config": "^1.0.4",
+    "@kubernetes/client-node": "^0.15.0",
+    "commander": "^8.0.0",
+    "get-port": "^5.1.1",
+    "ora": "^5.4.1",
+    "ts-invariant": "^0.9.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
@@ -37,16 +39,14 @@
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node": ">=12"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "volta": {
     "node": "14.15.0",
     "yarn": "1.22.10"
-  },
-  "dependencies": {
-    "@indivorg/eslint-config": "^1.0.4",
-    "@kubernetes/client-node": "^0.15.0",
-    "commander": "^8.0.0",
-    "get-port": "^5.1.1",
-    "ora": "^5.4.1",
-    "ts-invariant": "^0.9.0"
   }
 }
