--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "build": "tsc",
     "dev": "ts-node src/main.ts",
     "test": "jest --coverage src/**/*",
-    "lint": "eslint ."
+    "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "eslintConfig": {
     "extends": "@indivorg/eslint-config"
   },
   "dependencies": {
-    "@indivorg/eslint-config": "^1.0.4",
     "@kubernetes/client-node": "^0.15.0",
     "commander": "^8.0.0",
     "get-port": "^5.1.1",
@@ -29,6 +28,7 @@
     "ts-invariant": "^0.9.0"
   },
   "devDependencies": {
+    "@indivorg/eslint-config": "^2",
     "@types/jest": "^26.0.24",
     "@types/node": "^14",
     "eslint": "^7.30.0",
